--- a/package.json
+++ b/package.json
@@ -13,5 +13,9 @@
         "postcss": "^8.1.14",
         "sass": "^1.32.11",
         "vite": "^3.0.0"
+    },
+    "dependencies": {
+        "@easepick/bundle": "^1.2.0",
+        "@mdi/font": "^7.0.96"
     }
 }
